@@ -47,7 +47,7 @@ cpsdefault_search_layout = {
                 'fields': ['portal_type'],
                 'is_i18n': 1,
                 'label_edit': 'label_search_portal_type',
-                'vocabulary': 'search_portal_type_voc',
+                'vocabulary': 'search_portal_type',
                 'size': 4,
                 },
             },
@@ -57,7 +57,7 @@ cpsdefault_search_layout = {
                 'fields': ['review_state'],
                 'is_i18n': 1,
                 'label_edit': 'label_search_status',
-                'vocabulary': 'search_review_state_voc',
+                'vocabulary': 'search_review_state',
                 'translated': 0,
                 },
             },
