@@ -43,14 +43,14 @@
     <property name="is_i18n">1</property>
     <property name="label_edit">label_search_portal_type</property>
     <property name="size">4</property>
-    <property name="vocabulary">search_portal_type_voc</property>
+    <property name="vocabulary">search_portal_type</property>
   </widget>
   <widget id="review_state" kind="CPS Select Widget">
     <property name="fields">
      <element value="review_state" /></property>
     <property name="is_i18n">1</property>
     <property name="label_edit">label_search_status</property>
-    <property name="vocabulary">search_review_state_voc</property>
+    <property name="vocabulary">search_review_state</property>
   </widget>
   <widget id="sort_by" kind="CPS Search Sort Widget">
     <property name="fields">
