@@ -31,6 +31,8 @@ Bug fixes:
 - Added missing http cache headers to msie.css.
 - Made the advanced search form custom widgets/schemas/layouts/vocabularies be
   declared in clean modules instead of having them as skin scripts.
+- Renamed vocabularies for the advanced search. This is a part of the fix for
+  #700.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Small refactoring of folder_localrole_edit.py to move setting `reindex` out
